instancio-core: remove an export from module-info.java